--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sticky_notes
 description: "Draggable Sticky Notes within parent Stack. Notes can be customized."
-version: 0.0.6
+version: 0.4.0
 repository: "https://github.com/mis177/sticky-notes"
 
 environment:
@@ -15,11 +15,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  test: ^1.24.9
 
 platforms:
   android:
   ios:
+  web:
+  windows:
 
+screenshots:
+- description: 'Example code in action'
+  path: example/screenshots/usage.gif
 
 flutter:
 
